1. Метод .of [#70623 #490008]